force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Contract_Amendment__c/Contract_Amendment__c.object-meta.xml
<CustomObject>
    <label>Contract Amendment</label>
    <nameField>
        <displayFormat>CAMID-{0000}</displayFormat>
        <label>Contract Amendment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>