force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Contract_Amendment__c/fields/Amendment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Summary__c</fullName>
    <label>Amendment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>