force-app/main/ProviderNetworkAgents/ProviderAgents/ProviderContractInquiryAgent/objects/Contract_Amendment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Amendments</relationshipLabel>
    <relationshipName>Contract_Amendments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>